# home_assistant_mcp

./: .gitignore  README.md  README_EN.md  pyproject.toml
src/home_assistant_mcp/: __init__.py  home_assistant_setup.py  mcp_server.py
